# 20261R0136COSE47400

./: .gitignore  Midterm Presentation Slides  README.md  pyproject.toml  the_diff.txt
FiLM/outputs/final_extracted_results/: checkpoint_metadata.txt  evaluate_all.txt  evaluate_val.txt
configs/: default.yaml
scripts/: evaluate.py  reconstruct.py  smoke_test.py  train_classifier.py  train_cvae.py
src/mid_unet_cvae/: __init__.py  data.py  losses.py  metrics.py  models.py  utils.py
unet/: Baseline_Vanilla_CVAE_2.ipynb
vanilla/: README.md  save_images.py
vanilla/configs/: default.yaml
vanilla/scripts/: evaluate.py  smoke_test.py  train_cvae.py
vanilla/src/vanilla_cvae/: __init__.py  data.py  losses.py  metrics.py  models.py  utils.py
