[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mid-unet-cvae"
version = "0.1.0"
description = "Classifier-guided U-Net CVAE for same-label MRI reconstruction."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
  "Pillow>=10.0",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
